Move spread_rate_adjustment from calc_surface_fire_behavior_max to calc_surface_fire_behavior_no_wind_no_slope

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2427,21 +2427,23 @@ def get_wind_speed_fn(B, C, F):
 
 #+name: surface-fire-behavior-no-wind-no-slope
 #+begin_src python
-def calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model):
+def calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model, spread_rate_adjustment=1.0):
     """
-    Given a dictionary containing these keys:
-    - delta :: ft                                      (fuel depth)
-    - w_o   :: lb/ft^2                                 (ovendry fuel loading)
-    - rho_p :: lb/ft^3                                 (ovendry particle density)
-    - sigma :: ft^2/ft^3                               (fuel particle surface-area-to-volume ratio)
-    - h     :: Btu/lb                                  (fuel particle low heat content)
-    - S_T   :: lb minerals/lb ovendry wood             (fuel particle total mineral content)
-    - S_e   :: lb silica-free minerals/lb ovendry wood (fuel particle effective mineral content)
-    - M_x   :: lb moisture/lb ovendry wood             (fuel particle moisture of extinction)
-    - M_f   :: lb moisture/lb ovendry wood             (fuel particle moisture content)
-    - f_ij  :: %                                       (percent of load per size class)
-    - f_i   :: %                                       (percent of load per category)
-    - g_ij  :: %                                       (percent of load per size class - Albini_1976_FIREMOD, page 20)
+    Given these inputs:
+    - moisturized_fuel_model :: dictionary of fuel model and fuel moisture properties
+      - delta :: ft                                      (fuel depth)
+      - w_o   :: lb/ft^2                                 (ovendry fuel loading)
+      - rho_p :: lb/ft^3                                 (ovendry particle density)
+      - sigma :: ft^2/ft^3                               (fuel particle surface-area-to-volume ratio)
+      - h     :: Btu/lb                                  (fuel particle low heat content)
+      - S_T   :: lb minerals/lb ovendry wood             (fuel particle total mineral content)
+      - S_e   :: lb silica-free minerals/lb ovendry wood (fuel particle effective mineral content)
+      - M_x   :: lb moisture/lb ovendry wood             (fuel particle moisture of extinction)
+      - M_f   :: lb moisture/lb ovendry wood             (fuel particle moisture content)
+      - f_ij  :: %                                       (percent load per size class)
+      - f_i   :: %                                       (percent load per category)
+      - g_ij  :: %                                       (percent load per size class - Albini_1976_FIREMOD, page 20)
+    - spread_rate_adjustment :: unitless float (1.0 for no adjustment)
 
     return a dictionary containing these keys:
     - base_spread_rate         :: ft/min
@@ -2485,8 +2487,8 @@ def calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model):
     get_phi_W      = get_phi_W_fn(beta, B, C, F)
     get_wind_speed = get_wind_speed_fn(B, C, F)
     return {
-        "base_spread_rate"        : R0,
-        "base_fireline_intensity" : I_B,
+        "base_spread_rate"        : R0 * spread_rate_adjustment,
+        "base_fireline_intensity" : I_B * spread_rate_adjustment,
         "max_effective_wind_speed": U_eff_max,
         "get_phi_S"               : get_phi_S,
         "get_phi_W"               : get_phi_W,
@@ -2694,9 +2696,8 @@ def surface_fire_eccentricity(effective_wind_speed):
 #+name: surface-fire-behavior-max
 #+begin_src python
 # NOTE: No longer takes ellipse_adjustment_factor parameter
-# FIXME: Don't include spread_rate_adjustment in this function
 def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, wind_from_direction,
-                                   slope, aspect, spread_rate_adjustment=1.0, use_wind_limit=True):
+                                   slope, aspect, use_wind_limit=True):
     """
     Given these inputs:
     - surface_fire_min       :: dictionary of no-wind-no-slope surface fire behavior values
@@ -2710,7 +2711,6 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, wind_f
     - wind_from_direction    :: degrees clockwise from North
     - slope                  :: rise/run
     - aspect                 :: degrees clockwise from North
-    - spread_rate_adjustment :: unitless float (1.0 for no adjustment)
     - use_wind_limit         :: boolean
 
     return a dictionary containing these keys:
@@ -2721,8 +2721,8 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, wind_f
     - eccentricity           :: unitless (0: circular spread, > 0: elliptical spread)
     """
     # Unpack no-wind-no-slope surface fire values
-    spread_rate        = surface_fire_min["base_spread_rate"] * spread_rate_adjustment
-    fireline_intensity = surface_fire_min["base_fireline_intensity"] * spread_rate_adjustment
+    spread_rate        = surface_fire_min["base_spread_rate"]
+    fireline_intensity = surface_fire_min["base_fireline_intensity"]
     max_wind_speed     = surface_fire_min["max_effective_wind_speed"]
     get_phi_W          = surface_fire_min["get_phi_W"]
     get_phi_S          = surface_fire_min["get_phi_S"]
@@ -4235,6 +4235,7 @@ def compute_max_in_situ_values(inputs, t, y, x):
     # Spread Rate Adjustments
     fuel_spread_adjustment        = inputs.get("fuel_spread_adjustment"   , one_everywhere)(t,y,x)
     weather_spread_adjustment     = inputs.get("weather_spread_adjustment", one_everywhere)(t,y,x)
+    spread_rate_adjustment        = fuel_spread_adjustment * weather_spread_adjustment
     # Check Whether Cell is Burnable
     fuel_model = fm.fuel_model_table.get(fuel_model_number)
     if not (fuel_model and fuel_model["burnable"]):
@@ -4257,7 +4258,8 @@ def compute_max_in_situ_values(inputs, t, y, x):
         moisturized_fuel_model  = fm.moisturize(fuel_model, fuel_moisture)
         # Baseline Surface Fire Behavior
         # TODO: Memoize calc_surface_fire_behavior_no_wind_no_slope
-        surface_fire_min        = sf.calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model)
+        surface_fire_min        = sf.calc_surface_fire_behavior_no_wind_no_slope(moisturized_fuel_model,
+                                                                                 spread_rate_adjustment)
         # Midflame Wind Speed
         (wind_speed_10m,
          wind_from_direction)   = conv.cartesian_to_azimuthal(wind_speed_10m_x, wind_speed_10m_y) # (m/min, deg)
@@ -4267,13 +4269,11 @@ def compute_max_in_situ_values(inputs, t, y, x):
                                                               conv.m_to_ft(canopy_height),
                                                               canopy_cover) # ft/min
         # Max Surface Fire Behavior
-        spread_rate_adjustment  = fuel_spread_adjustment * weather_spread_adjustment # unitless
         surface_fire_max        = sf.calc_surface_fire_behavior_max(surface_fire_min,
                                                                     midflame_wind_speed,
                                                                     wind_from_direction,
                                                                     slope,
-                                                                    aspect,
-                                                                    spread_rate_adjustment)
+                                                                    aspect)
         max_surface_spread_rate      = surface_fire_max["max_spread_rate"] # ft/min
         max_spread_direction         = surface_fire_max["max_spread_direction"] # deg
         surface_eccentricity         = surface_fire_max["eccentricity"] # unitless
